--- a/Styles/Main page/MainPageStyle.css
+++ b/Styles/Main page/MainPageStyle.css
@@ -1,12 +1,13 @@
 html {
     height: 100%
 }
-    .Header {
+.Header {
     color: deeppink;
     text-decoration: underline;
     font-family: JapaneseFont;
     text-align: center;
     font-size: 45px;
+    text-shadow: 2px 2px pink;
 }
 
 body {
@@ -25,9 +26,18 @@ body {
 
 }
 
-/*START OF SIDEBAR*/
+footer {
+    text-align: center;
+    padding: 5px;
+    background-color: black;
+    color: white;
+    font-family: JapaneseFont;
+    text-shadow: 0.5px 0.5px white;
+}
 
- #main-container {
+
+    /*START OF SIDEBAR*/
+    #main-container {
     display: table;
     width: 100%;
     height: 100%;
@@ -40,13 +50,15 @@ body {
     background-color: #CF5FD9;
 }
 
- #sidebar a {
+    #sidebar a {
         display: block;
         padding: 10px;
         color: black;
         margin: 15px 0 0 0;
+        font-size: 20px;
         text-decoration: none;
         font-family: JapaneseFont;
+        text-shadow: 1px 1px white;
     }
 
  #sidebar a:hover {
