--- a/Styles/Main page/MainPageStyle.css
+++ b/Styles/Main page/MainPageStyle.css
@@ -33,6 +33,10 @@ footer {
     color: white;
     font-family: JapaneseFont;
     text-shadow: 0.5px 0.5px white;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
 }
 
 
